scrollbar from landing page is resolved

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
 #app-container {
-  /* min-height: 100%;
-  position: relative; */
+  /* These two paddings are causing a horizontal scrollbar on the bottom of the footer. */
   padding: 10px;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
   text-align: center;
 }
