--- a/client/src/components/home/landingpage.css
+++ b/client/src/components/home/landingpage.css
@@ -3,6 +3,6 @@
 }
 
 img {
-  width: 60%;
+  width: 40%;
   height: auto;
 }
